Revision history for Perl extension IPC::Shareable.

1.12 UNREL
    -

1.11    2022-03-07
    - Fix certain tests so they don't throw if we bail early

1.10    2022-03-07
    - Fix issue where if segments were created underneath of a parent by an
      external process other than the process that created the parent, the
      global register wasn't being updated, therefore those segments weren't
      being removed when calling clean_up_all()
    - All test files now check number of segments before and after the entire
      script has run, verifying that all segments were cleaned up ok
    - The test suite itself in its entirety makes sure that all segments
      created during the suite run are cleaned up properly
    - Added CI_TESTING=1 to coverage CI tests

1.09    2022-03-06
    - Made 81-fork_dup_rand_keys.t developer only (but still need to figure out
      why it only fails on FreeBSD)

1.08    2022-03-04
    - Added 'protected' option and clean_up_protected(). If set, the cleanup
      methods, nor the automatic 'destroy' functionality will remove the segment
      the option was set in, nor any children created underneath of it. A call
      to clean_up_protected() is required to remove them
    - Updated attribute tests to include all available options
    - _shm_key_rand() now checks EXCLUSIVE_CHECK_LIMIT times to find a key for
      a free segment. It croaks if not
    - Added _shm_key_rand_int() so we can mock it to test the dup random key
      checks
    - Added build prereq of Mock::Sub to test the random key function

1.07    2022-03-04
    - When running in forked environments, _shm_key_rand() was consistently
      returning the same 'random' key to each forked process. We've fixed this
      issue, and added tests for it (fixed by adding a call to srand() before
      rand)
    - Move $SIG{CHLD} handlers to spawn() and unspawn() instead of having them
      global (fixes #15)