@@ -438,32 +438,37 @@ sub ipcs {
     return int($count);
 }
 sub spawn {
-    my ($knot, %opts) = @_;
+    my ($knot) = @_;
 
-    croak "spawn() requires a key/glue sent in..." if ! defined $opts{key};
-
-    $opts{mode} = 0666 if ! defined $opts{mode};
+    if (! defined $knot || ref($knot) ne 'IPC::Shareable') {
+        croak "spawn() requires a tied() IPC::Shareable object sent in";
+    }
 
     $SIG{CHLD} = 'IGNORE';
 
-    _spawn(
-        key     => $opts{key},
-        mode    => $opts{mode},
-    );
+    _spawn($knot);
 }
 sub _spawn {
-    my (%opts) = @_;
+    my ($knot) = @_;
+
+    my $key = $knot->seg->key . '_spawn';
+
+    my $protected;
+    $protected .= ord($_) for (split //, $key);
+    $knot->{attributes}{protected} = $protected;
 
     my $pid = fork;
     return if $pid;
 
     if (! $pid) {
+
+        # Make the key identifiable as a spawned object
+        # and set the protected status
+
         tie my %h, 'IPC::Shareable', {
-            key       => $opts{key},
-            create    => 1,
-            #exclusive => 1,
-            destroy   => $opts{destroy},
-            mode      => $opts{mode},
+            key         => $key,
+            create      => 1,
+            protected   => $protected,
         };
 
         $h{__ipc}->{run} = 1;
@@ -474,29 +479,32 @@ sub _spawn {
             last if ! $h{__ipc}->{run};
         }
 
-        IPC::Shareable->clean_up_all if $opts{destroy};
         exit 0;
     }
 }
 sub unspawn {
-    shift;
-    my ($key, $destroy) = @_;
+    my ($knot, $destroy) = @_;
 
     $destroy ||= 0;
+
+    my $key = $knot->seg->key . '_spawn';
+
+    my $protected;
+    $protected .= ord($_) for(split //, $key);
+
+    $knot->{attributes}{protected} = $protected;
 
     tie my %h, 'IPC::Shareable', {
         key       => $key,
         destroy   => $destroy,
-        mode      => 0666,
+        protected => $protected
     };
 
     $h{__ipc}->{run} = 0;
 
     $SIG{CHLD} = undef;
 
-    sleep 1;
-
-    IPC::Shareable->clean_up_all if $destroy;
+    IPC::Shareable->clean_up_protected($protected) if $destroy;
 }
 sub lock {
     my ($knot, $flags) = @_;
@@ -1146,16 +1154,16 @@ IPC::Shareable - Use shared memory backed variables across processes
     tie ARRAY,  'IPC::Shareable', OPTIONS;
     tie HASH,   'IPC::Shareable', OPTIONS;
 
-    (tied VARIABLE)->lock;
-    (tied VARIABLE)->unlock;
+    tied(VARIABLE)->lock;
+    tied(VARIABLE)->unlock;
 
-    (tied VARIABLE)->lock(LOCK_SH|LOCK_NB)
+    tied(VARIABLE)->lock(LOCK_SH|LOCK_NB)
         or print "Resource unavailable\n";
 
-    my $segment   = (tied VARIABLE)->seg;
-    my $semaphore = (tied VARIABLE)->sem;
+    my $segment   = tied(VARIABLE)->seg;
+    my $semaphore = tied(VARIABLE)->sem;
 
-    (tied VARIABLE)->remove;
+    tied(VARIABLE)->remove;
 
     IPC::Shareable::clean_up;
     IPC::Shareable::clean_up_all;
@@ -1167,7 +1175,7 @@ IPC::Shareable - Use shared memory backed variables across processes
 
     # Get the actual IPC::Shareable tied object
 
-    my $knot = tied VARIABLE; # Dereference first if necessary
+    my $knot = tied(VARIABLE); # Dereference first if using a tied reference
 
 =head1 DESCRIPTION
 
@@ -1290,7 +1298,10 @@ segments or semaphores related to the tied object.
 Set this to a specific integer so we can pass the value to any child objects
 created under the main one.
 
-To clean up protected objects, call C<< (tied %object)->clean_protected >>.
+To clean up protected objects, call
+C<< (tied %object)->clean_up_protected(integer) >>, where 'integer' is the
+value you set the C<protected> option to. You can call this cleanup routine in
+the script you created the segment, or anywhere else, at any time.
 
 Default: B<0>
 
@@ -1348,7 +1359,7 @@ Default values for options are:
     create      => 0,
     exclusive   => 0,
     mode        => 0666,
-    size        => IPC::Shareable::SHM_BUFSIZ(),
+    size        => IPC::Shareable::SHM_BUFSIZ(), # 65536
     protected   => 0,
     limit       => 1,
     destroy     => 0,
@@ -1363,10 +1374,19 @@ Default values for options are:
 
 Instantiates and returns a reference to a hash backed by shared memory.
 
+    my $href = IPC::Shareable->new(key => "testing", create => 1);
+
+    $href=>{a} = 1;
+
+    # Call tied() on the dereferenced variable to access object methods
+    # and information
+
+    tied(%$href)->ipcs;
+
 Parameters:
 
 Hash, Optional: See the L</OPTIONS> section for a list of all available options.
-Most often, you'll want to send in the B<key>, B<create> and B<destroy> options.
+Most often, you'll want to send in the B<key> and B<create> options.
 
 It is possible to get a reference to an array or scalar as well. Simply send in
 either C<< var = > 'ARRAY' >> or C<< var => 'SCALAR' >> to do so.
@@ -1395,7 +1415,8 @@ Default: B<false>
 =head2 ipcs
 
 Returns the number of instantiated shared memory segments that currently exist
-on the system.
+on the system. This isn't precise; it simply does a C<wc -l> line count on your
+system's C<ipcs -m> call. It is guaranteed though to produce reliable results.
 
 Return: Integer
 
@@ -1454,15 +1475,15 @@ of lock to acquire.  If C<$flags> is not specified, an exclusive
 read/write lock is obtained.  Acceptable values for C<$flags> are
 the same as for the C<flock()> system call.
 
-Returns C<true> on success, and C<undef> on error.  For non-blocking calls
+Returns C<true> on success, and C<undef> on error. For non-blocking calls
 (see below), the method returns C<0> if it would have blocked.
 
 Obtain an exclusive lock like this:
 
         tied(%var)->lock(LOCK_EX); # same as default
 
-Only one process can hold an exclusive lock on the shared memory at
-a given time.
+Only one process can hold an exclusive lock on the shared memory at a given
+time.
 
 Obtain a shared (read) lock:
 
@@ -1486,7 +1507,7 @@ using these calls in order for locking to work.  See the C<flock()> call for
 details.
 
 Locks are inherited through forks, which means that two processes actually
-can possess an exclusive lock at the same time.  Don't do that.
+can possess an exclusive lock at the same time. Don't do that.
 
 The constants C<LOCK_EX>, C<LOCK_SH>, C<LOCK_NB>, and C<LOCK_UN> are available
 for import using any of the following export tags:
@@ -1549,7 +1570,7 @@ segment and semaphore objects.
 
 IPC::Shareable provides methods to implement application-level
 advisory locking of the shared data structures.  These methods are
-called C<shlock()> and C<shunlock()>.  To use them you must first get the
+called C<lock()> and C<unlock()>. To use them you must first get the
 object underlying the tied variable, either by saving the return
 value of the original call to C<tie()> or by using the built-in C<tied()>
 function.
@@ -1574,15 +1595,15 @@ This will place an exclusive lock on the data of C<$scalar>.  You can
 also get shared locks or attempt to get a lock without blocking.
 
 L<IPC::Shareable> makes the constants C<LOCK_EX>, C<LOCK_SH>, C<LOCK_UN>, and
-C<LOCK_NB> exportable to your address space with the export tags
-C<:lock>, C<:flock>, or C<:all>.  The values should be the same as
-the standard C<flock> option arguments.
+C<LOCK_NB> exportable to your address space with the export tags C<:lock>,
+C<:flock>, or C<:all>.  The values should be the same as the standard C<flock>
+option arguments.
 
     if (tied(%hash)->lock(LOCK_SH|LOCK_NB)){
         print "The value is $hash{a}\n";
         tied(%hash)->unlock;
     } else {
-        print "Another process has an exlusive lock.\n";
+        print "Another process has an exclusive lock.\n";
     }
 
 If no argument is provided to C<lock>, it defaults to C<LOCK_EX>.
@@ -1595,11 +1616,6 @@ writing to the shared storage even if the advisory locks aren't being used.
 
 Using the advisory locks can speed up processes that are doing several writes/
 reads at the same time.
-
-=head1 REFERENCES
-
-Although references can reside within a shared data structure, the tied variable
-can not be a reference itself.
 
 =head1 DESTRUCTION
 
@@ -1681,6 +1697,18 @@ When setting L</protected>, you specified a lock key integer. When calling this
 method, you must send that integer in as a parameter so we know which segments
 to clean up.
 
+    my $protect_key = 93432;
+
+    IPC::Shareable->clean_up_protected($protect_key);
+
+    # or
+
+    tied($var)->clean_up_protected($protect_key;
+
+    # or
+
+    $knot->clean_up_protected($protect_key)
+
 Parameters:
 
     $protect_key
@@ -1709,8 +1737,8 @@ Steve Bertrand <steveb@cpan.org>
 
 =item 1
 
-If the process has been smoked by an untrapped signal, the binding
-will remain in shared memory.  If you're cautious, you might try
+If the process has been smoked by an untrapped signal, the binding will remain
+in shared memory.  If you're cautious, you might try:
 
  $SIG{INT} = \&catch_int;
  sub catch_int {
@@ -1736,7 +1764,7 @@ When using C<lock()> to lock a variable, be careful to guard against
 signals.  Under normal circumstances, C<IPC::Shareable>'s C<END> method
 unlocks any locked variables when the process exits.  However, if an
 untrapped signal is received while a process holds an exclusive lock,
-C<DESTROY> will not be called and the lock may be maintained even though
+C<END> will not be called and the lock may be maintained even though
 the process has exited.  If this scares you, you might be better off
 implementing your own locking methods.
 
@@ -1758,7 +1786,7 @@ locking mechanism implemented in IPC::Shareable.
 There is a program called C<ipcs>(1/8) (and C<ipcrm>(1/8)) that is
 available on at least Solaris and Linux that might be useful for
 cleaning moribund shared memory segments or semaphore sets produced
-by bugs in either IPC::Shareable or applications using it.
+by bugs in either L<IPC::Shareable> or applications using it.
 
 Examples:
 
@@ -1796,13 +1824,13 @@ obtained a lock (it is better to obtain a read (or write) lock before
 iterating over a hash tied to L<IPC::Shareable>, but we attempt this
 optimization if you do not).
 
-The C<fetch>/C<thaw> operation is performed
+For tied hashes, the C<fetch>/C<thaw> operation is performed
 when the first key is accessed.  Subsequent key and and value
 accesses are done without accessing shared memory.  Doing an
 assignment to the hash or fetching another value between key
-accesses causes the hash to be replaced from shared memory.  The
+accesses causes the hash to be replaced from shared memory. The
 state of the iterator in this case is not defined by the Perl
-documentation.  Caveat Emptor.
+documentation. Caveat Emptor.
 
 =back
 
@@ -1828,5 +1856,3 @@ Thanks to all those with comments or bug fixes, especially
 
 L<perltie>, L<Storable>, C<shmget>, C<ipcs>, C<ipcrm> and other SysV IPC manual
 pages.
-
-
