@@ -1,7 +1,13 @@
 Revision history for Perl extension IPC::Shareable.
 
 1.12 UNREL
-    -
+    - Added examples/spawn for showing how spawn() works (this method is going
+      to be deprecated though)
+    - Add tests in t/07-new.t to test how using tied() against a dereferenced
+      variable returned from new() allows access to the underlying
+      IPC::Shareable object
+    - Reworked how spawn() and unspawn() manage things internally
+    - POD updates, fixes and clarifications
 
 1.11    2022-03-07
     - Fix certain tests so they don't throw if we bail early
